Fixed Website Color Contrast Issue

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg/css/components/_site-description.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg/css/components/_site-description.scss
@@ -1,5 +1,5 @@
 .site-description {
-	color: rgba( 255, 255, 255, 0.98);
+	color: rgba( 255, 255, 255, 0.91);
 	font-size: ms( 2 );
 	font-weight: 300;
 	margin: -0.4rem auto 2rem;
